--- a/src/components/SettingSideBar/SettingBar.css
+++ b/src/components/SettingSideBar/SettingBar.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 15px;
   align-items: center;
-  height: 3.25rem;
+  height: 3rem;
   padding-left: 20px;
   margin-bottom: 1rem;
   border-radius: 10px;
@@ -10,21 +10,23 @@
 }
 .setting-bar {
   background-color: white;
-  width: 250px;
+  width: 200px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  height: 100%;
+
   position: relative;
   z-index: 9;
-  padding: 3rem 1.25rem;
+  padding: 2.5rem 1.5rem;
   text-align: center;
 }
 .indiv-link p {
-  font-size: 20px;
+  font-size: 18px;
   color: #7b7b7b;
   font-weight: 600;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
+.social-ul a img {
+  width: 80%;
+}
 .active-link {
   background-color: rgba(199, 175, 255, 0.25);
 }
@@ -33,7 +35,7 @@
 }
 .social-ul {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   margin-top: 20px;
   padding-left: 20px;
   margin-left: 0;
@@ -41,4 +43,54 @@
 }
 .social-ul li {
   list-style: none;
+}
+
+@media (min-width: 1400px) {
+  .social-ul a img {
+    width: 100%;
+  }
+  .indiv-link {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    height: 3.25rem;
+    padding-left: 20px;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    list-style: none;
+  }
+  .setting-bar {
+    background-color: white;
+    width: 250px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 100%;
+    position: relative;
+    z-index: 9;
+    padding: 3rem 1.7rem;
+    text-align: center;
+  }
+  .indiv-link p {
+    font-size: 20px;
+    color: #7b7b7b;
+    font-weight: 600;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .active-link {
+    background-color: rgba(199, 175, 255, 0.25);
+  }
+  .active-link p {
+    color: #8358e8 !important;
+  }
+  .social-ul {
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+    padding-left: 20px;
+    margin-left: 0;
+    flex-direction: row;
+  }
+  .social-ul li {
+    list-style: none;
+  }
 }
