--- a/src/pages/Dashboard-Settings/Dashboard-Settings.css
+++ b/src/pages/Dashboard-Settings/Dashboard-Settings.css
@@ -1,4 +1,4 @@
-.settings {
+/* .settings {
   width: 70%;
   padding-top: 3rem;
   display: flex;
@@ -35,4 +35,8 @@
 
     margin: 0 auto;
   }
+} */
+
+.setting-content {
+  padding-bottom: 10rem !important;
 }
