--- a/src/pages/Dashboard-Settings/Dashboard-Settings.scss
+++ b/src/pages/Dashboard-Settings/Dashboard-Settings.scss
@@ -1,4 +1,4 @@
-.changelog-main {
+.setting-main {
     all: unset;
     width: 100%;
     height: 100%;
@@ -46,11 +46,13 @@
           margin-bottom: 2.5rem;
         }
       }
-    .changelog {
+    .setting {
         width: 88%;
+        flex-direction: row;
+
         padding-top: 0rem;
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         margin-left: 0px;
         .changelog-content {
             display: flex; 
@@ -166,7 +168,7 @@
         }
     }
 @media (max-width:1300px) {
-    .changelog-main .changelog {
+    .setting-main .setting {
     width: 81%; 
    
     margin-left: 60px;
@@ -179,12 +181,12 @@
   }
 }
 @media (max-width:1040px) {
-    .changelog-main .changelog {
+    .setting-main .setting {
     width: 87%; 
    
     margin-left: 30px;
 }
-.changelog-main .changelog .changelog-content .changelog-item .icon {
+.setting-main .setting .changelog-content .changelog-item .icon {
     padding: 8px;
     background-color: #8358E8;
     border-radius: 50%;
@@ -197,12 +199,12 @@
     
 }
 @media (max-width:600px) {
-    .changelog-main .changelog {
+    .setting-main .setting {
     width: 90%; 
    
     margin: 0 auto;
 }
-.changelog-main .changelog .changelog-content{
+.setting-main .setting .changelog-content{
     margin-left: 2px;
 }
     
@@ -215,7 +217,7 @@
     
 }
 @media (max-width:430px) {
-    .changelog-main .changelog .changelog-content .changelog-item .version-info .date {
+    .setting-main .changelog .changelog-content .changelog-item .version-info .date {
     font-size: 20px;
  
 }
